# metalign

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Manifest.toml  Project.toml  README.md  Singularity.def  _quarto.yml  matplotlibrc  pyproject.toml  setup.sh
.datalad/: config
.github/workflows/: ci.yml
data/: base_config.toml  base_notmeta_config.toml  example_transformer_config.toml
data/backbone_reps/: backbones.json  coco_eval_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_11-hook_resid_post_raw.h5  coco_eval_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_6-hook_resid_post_raw.h5  coco_eval_vit_base_patch16_dinov3.lvd1689m.h5  coco_eval_vit_base_patch16_siglip_256.v2_webli.h5  coco_eval_webssl_mae300m_full2b_224.h5  coco_train_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_11-hook_resid_post_raw.h5  coco_train_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_6-hook_resid_post_raw.h5  coco_train_vit_base_patch16_dinov3.lvd1689m.h5  coco_train_vit_base_patch16_siglip_256.v2_webli.h5  coco_train_webssl_mae300m_full2b_224.h5  levels_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_11-hook_resid_post_raw.h5  levels_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_6-hook_resid_post_raw.h5  levels_vit_base_patch16_dinov3.lvd1689m.h5  levels_vit_base_patch16_siglip_256.v2_webli.h5  levels_webssl_mae300m_full2b_224.h5  things_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_11-hook_resid_post_raw.h5  things_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_6-hook_resid_post_raw.h5  things_vit_base_patch16_dinov3.lvd1689m.h5  things_vit_base_patch16_siglip_256.v2_webli.h5  things_webssl_mae300m_full2b_224.h5  thingsplus_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_11-hook_resid_post_raw.h5  thingsplus_CLIP-ViT-B-32-DataComp.XL-s13B-b90K_sae-top_k-64-cls_only-layer_6-hook_resid_post_raw.h5
data/cache/: geom.npz
data/checkpoints/: best_models.json
data/configs/: 2layers_clip.toml  2layers_dinov3.toml  2layers_mae.toml  2layers_siglip2.toml  32heads_clip.toml  32heads_dinov3.toml  32heads_mae.toml  32heads_siglip2.toml  8heads_clip.toml  8heads_dinov3.toml  8heads_mae.toml  8heads_siglip2.toml  lstm_clip.toml  lstm_dinov3.toml  lstm_mae.toml  lstm_siglip2.toml  main_clip.toml  main_dinov3.toml  main_mae.toml  main_siglip2.toml  midsae_clip.toml  midsae_dinov3.toml  midsae_mae.toml  midsae_siglip2.toml  mlp_clip.toml  mlp_dinov3.toml  mlp_mae.toml  mlp_siglip2.toml  noemb_clip.toml  noemb_dinov3.toml  noemb_mae.toml  noemb_siglip2.toml  raw_clip.toml  raw_dinov3.toml  raw_mae.toml  raw_siglip2.toml  static_linear_clip.toml  static_linear_dinov3.toml  static_linear_mae.toml  static_linear_siglip2.toml  (+4 more)
data/evals/: o1o_stats.csv
data/sae/: coco_eval_sae-top_k-64-cls_only-layer_11-hook_resid_post.h5  coco_eval_sae-top_k-64-cls_only-layer_6-hook_resid_post.h5  coco_train_sae-top_k-64-cls_only-layer_11-hook_resid_post.h5  coco_train_sae-top_k-64-cls_only-layer_6-hook_resid_post.h5  levels_sae-top_k-64-cls_only-layer_11-hook_resid_post.h5  levels_sae-top_k-64-cls_only-layer_6-hook_resid_post.h5  things_sae-top_k-64-cls_only-layer_11-hook_resid_post.h5  (+3 more)
metalign/: cognitive_model.py  constants.py  data.py  model.py  test_data.py  test_model.py  utils.py
metarep/: constants.py  data.py  metrics.py  model.py  positional_encoding.py  rope.py  test_data.py  test_model.py  transforms.py
(+344 files in other folders)
