[project]
name = "metalign"
requires-python = "==3.12.5"
version = "0.0.1"
dependencies = [
    "torch", 
    "seaborn",
    "schedulefree", 
    "fastcore", 
    "einops", 
    "torchvision", 
    "scikit-learn", 
    "h5py", 
    "wandb", 
    "tomli-w",
    "nnsight",
    "flash-attn ; sys_platform == 'linux'",
    "transformers @ git+https://github.com/huggingface/transformers.git@4912d5b490a39d621b9d6f1b80df446d99e6239a", # need the fresh commit because dinov3 is just added
    "vit_prisma @ git+https://github.com/Prisma-Multimodal/ViT-Prisma.git@97dd26fc01dfd856060c4a234b882c6f16836c15", 
    ]

[project.optional-dependencies]
dev = ["pytest", "pre-commit", "ruff", "ipykernel", "shiny"]

[tool.setuptools]
packages = ["metalign"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]


[tool.uv.build-backend]
module-name = "metalign"
module-root = ""

[tool.ruff]
line-length = 200
lint.ignore = ["E731", "E501", "E701", "E702", "F403"]
lint.extend-select = ["I"]
target-version = "py312"
include = ["bin/*.ipynb"]


[tool.ruff.lint.isort]
extra-standard-library = ["tomllib"]
known-third-party = ["wandb"]