[project]
name = "metalign"
requires-python = "==3.12.5"
version = "0.0.1"
dependencies = [
    "torch",
    "seaborn",
    "schedulefree",
    "fastcore",
    "einops",
    "torchvision",
    "scikit-learn",
    "h5py",
    "wandb",
    "tomli-w",
    "timm",
    "nnsight",
    "torchmetrics",
    "tables",
    "vit_prisma @ git+https://github.com/Prisma-Multimodal/ViT-Prisma.git@97dd26fc01dfd856060c4a234b882c6f16836c15",
    "nilearn>=0.12.1",
    "pycortex>=1.2.11",
    "numpyro",
]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "ipykernel", "shiny", "ipdb", "nbclassic"]
cuda = ["flash-attn"]

[tool.setuptools]
packages = ["metalign"]

[build-system]
requires = ["uv_build>=0.7.21,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.build-backend]
module-name = "metalign"
module-root = ""

[tool.ruff.lint.isort]
extra-standard-library = ["tomllib"]
known-third-party = ["wandb"]
[tool.ruff.lint]
ignore = ["E701"]
